# llm_code_and_review_tools

./: .gitignore  .gitmodules  AGENTS.md  README.md  install.sh  pyproject.toml
.beads/: issues.jsonl
crash_tool/: README.md  pyproject.toml
crash_tool/crash_tool/: cli.py  session.py
docs/: TOOL_USAGE.md
gerrit_cli/: README.md  pyproject.toml
gerrit_cli/gerrit_cli/: cli.py  client.py  describe.py  extractor.py  graph.py  parsers.py  patch_workflow.py  rebase.py  reviewer.py  series.py
gerrit_comments/gerrit_comments/: cli.py  (+2 more)
janitor_tool/: pyproject.toml
janitor_tool/janitor_tool/: __init__.py  cli.py  client.py  config.py  errors.py
jenkins_tool/: README.md  pyproject.toml
jira_tool/: pyproject.toml
llm_tool_common/: pyproject.toml
lustre-drgn-tools/: LICENSE  README.md  kernel_triage.py  lustre_analyze.py  lustre_helpers.py  lustre_triage.py  obd_devs.py  ptlrpc.py  pyproject.toml
maloo_tool/: README.md  pyproject.toml
patch_shepherd/: CLAUDE.md  config.py  daily_confidence.sh  install.sh  orchestrator.py  patch_shepherd.service  patch_shepherd.timer  patch_shepherd_daily.service  patch_shepherd_daily.timer  run_shepherd.sh  run_watcher.sh  send_report.sh  shepherd_tool.sh  watcher_tool.sh
patch_watcher/: CLAUDE.md  config.py  daily_confidence.sh  install.sh  orchestrator.py  patch_watcher.service  patch_watcher.timer  patch_watcher_daily.service  patch_watcher_daily.timer  prompt_template.sh  pyproject.toml  run_watcher.sh  send_report.sh  watcher_tool.sh
scripts/: daily_patch_report.py  ddn_stale_report.py  weekly_patch_report.py
(+65 files in other folders)
